refactor: add some styles and real images

--- a/index.html
+++ b/index.html
@@ -19,12 +19,15 @@
 
       <div class="profileCard__imageCard">
         <div class="profileCard__userInfo">
-          <div class="profileCard__img">
-            <div class="profileCard__imgIcon"></div>
-          </div>
+          <img
+            src="https://avatars.githubusercontent.com/u/53856673?v=4"
+            class="profileCard__img"
+          />
 
           <h5>Makuza Verite</h5>
-          <button class="profileCard__gitLink">visit git profile</button>
+          <a href="https://github.com/veritem" class="profileCard__gitLink"
+            >visit git profile</a
+          >
         </div>
       </div>
 
@@ -38,7 +41,10 @@
 
       <div class="profileCard__activities">
         <div class="profileCard__activitiesSection">
-          <div class="profileCard__activitiesImg"></div>
+          <img
+            class="profileCard__activitiesImg imgRight"
+            src="https://images.generated.photos/7jZAPdZprjB-gwU4smV7c5dWuvN9L8I4H_S1ZKPLAgk/rs:fit:512:512/wm:0.95:sowe:18:18:0.33/czM6Ly9pY29uczgu/Z3Bob3Rvcy1wcm9k/LnBob3Rvcy92M18w/ODExMjU1LmpwZw.jpg"
+          />
 
           <div class="profileCard__activitiesGroup">
             <h5>Brain Works</h5>
@@ -47,9 +53,15 @@
         </div>
         <div class="profileCard__activitiesSection2">
           <div class="profileCard__activitiesFlexImgs">
-            <div class="profileCard__activitiesImg"></div>
-
-            <div class="profileCard__activitiesImg imgRight"></div>
+            <img
+              class="profileCard__activitiesImg"
+              alt="image"
+              src="https://images.generated.photos/2o-qU7P-6_wK7ArDudvDjQFwhGB0LH4VNNDu0R5Am8s/rs:fit:512:512/wm:0.95:sowe:18:18:0.33/czM6Ly9pY29uczgu/Z3Bob3Rvcy1wcm9k/LnBob3Rvcy92M18w/MDI2MDY3LmpwZw.jpg"
+            />
+            <img
+              class="profileCard__activitiesImg imgRight"
+              src="https://images.generated.photos/7jZAPdZprjB-gwU4smV7c5dWuvN9L8I4H_S1ZKPLAgk/rs:fit:512:512/wm:0.95:sowe:18:18:0.33/czM6Ly9pY29uczgu/Z3Bob3Rvcy1wcm9k/LnBob3Rvcy92M18w/ODExMjU1LmpwZw.jpg"
+            />
           </div>
 
           <div class="profileCard__activitiesGroup">
@@ -60,9 +72,15 @@
 
         <div class="profileCard__activitiesSection2">
           <div class="profileCard__activitiesFlexImgs">
-            <div class="profileCard__activitiesImg"></div>
-
-            <div class="profileCard__activitiesImg imgRight"></div>
+            <img
+              class="profileCard__activitiesImg"
+              alt="image"
+              src="https://images.generated.photos/2o-qU7P-6_wK7ArDudvDjQFwhGB0LH4VNNDu0R5Am8s/rs:fit:512:512/wm:0.95:sowe:18:18:0.33/czM6Ly9pY29uczgu/Z3Bob3Rvcy1wcm9k/LnBob3Rvcy92M18w/MDI2MDY3LmpwZw.jpg"
+            />
+            <img
+              class="profileCard__activitiesImg imgRight"
+              src="https://images.generated.photos/7jZAPdZprjB-gwU4smV7c5dWuvN9L8I4H_S1ZKPLAgk/rs:fit:512:512/wm:0.95:sowe:18:18:0.33/czM6Ly9pY29uczgu/Z3Bob3Rvcy1wcm9k/LnBob3Rvcy92M18w/ODExMjU1LmpwZw.jpg"
+            />
           </div>
 
           <div class="profileCard__activitiesGroup">
@@ -81,7 +99,10 @@
       </div>
       <div class="profileCard__activities endCard">
         <div class="profileCard__activitiesSection">
-          <div class="profileCard__activitiesImg"></div>
+          <img
+            class="profileCard__activitiesImg imgRight"
+            src="https://images.generated.photos/2o-qU7P-6_wK7ArDudvDjQFwhGB0LH4VNNDu0R5Am8s/rs:fit:512:512/wm:0.95:sowe:18:18:0.33/czM6Ly9pY29uczgu/Z3Bob3Rvcy1wcm9k/LnBob3Rvcy92M18w/MDI2MDY3LmpwZw.jpg"
+          />
 
           <div class="profileCard__activitiesGroup end">
             <h5>Brain Works</h5>
